--- a/pages/aerotower/models.mdx
+++ b/pages/aerotower/models.mdx
@@ -1,5 +1,6 @@
 import Head from 'next/head'
 import { ModelViewer } from '../../components/ModelViewer'
+import { BreakingChangeAlert } from '../../components/BreakingChangeAlert'
 
 <Head>
   <title>AeroTower Models</title>
@@ -11,28 +12,44 @@ Below are previews of the 3d models for printing. [You may download the files di
 
 ## Tower Modul
 
+This is the main module of the tower. You can print this model multiple times and stack them together.
+
 <ModelViewer url='https://raw.githubusercontent.com/mfillmer/3d-modelling/6aae23a79189e27bfb1a3efb5d112d7af5549cbf/smart_grow/aero_tower/outfiles/aero_tower.stl' />
 
+## Plant Cup
+
+These cups are designed to contain the plants from seed to harvest.
+Five cups can be mounted into one tower module.
+
+<ModelViewer url='https://raw.githubusercontent.com/mfillmer/3d-modelling/6aae23a79189e27bfb1a3efb5d112d7af5549cbf/smart_grow/aero_tower/outfiles/plant_cup.stl' />
 ## Tower Tank
+
+Please make sure this part is watertight. You can refer to [this article](https://help.prusa3d.com/article/watertight-prints_112324) to configure your printer accordingly.
 
 <ModelViewer url='https://raw.githubusercontent.com/mfillmer/3d-modelling/6aae23a79189e27bfb1a3efb5d112d7af5549cbf/smart_grow/aero_tower/outfiles/aero_tower_tank.stl' />
 
 ## Tower Tank Adapter
 
+Bridging between tank and tower module.
+
 <ModelViewer url='https://raw.githubusercontent.com/mfillmer/3d-modelling/6aae23a79189e27bfb1a3efb5d112d7af5549cbf/smart_grow/aero_tower/outfiles/aero_tower_tank_adapter.stl' />
 
 ## Tower Head
+
+<BreakingChangeAlert />
+
+The housing for the electronics at the top of the tower.
 
 <ModelViewer url='https://raw.githubusercontent.com/mfillmer/3d-modelling/6aae23a79189e27bfb1a3efb5d112d7af5549cbf/smart_grow/aero_tower/outfiles/aero_tower_head.stl' />
 
 ## Tower Head Fogger
 
+<BreakingChangeAlert />
+
 <ModelViewer url='https://raw.githubusercontent.com/mfillmer/3d-modelling/6aae23a79189e27bfb1a3efb5d112d7af5549cbf/smart_grow/aero_tower/outfiles/aero_tower_head_fogger.stl' />
 
 ## Tower Head Lid
 
+<BreakingChangeAlert />
+
 <ModelViewer url='https://raw.githubusercontent.com/mfillmer/3d-modelling/6aae23a79189e27bfb1a3efb5d112d7af5549cbf/smart_grow/aero_tower/outfiles/aero_tower_head_lid.stl' />
-
-## Plant Cup
-
-<ModelViewer url='https://raw.githubusercontent.com/mfillmer/3d-modelling/6aae23a79189e27bfb1a3efb5d112d7af5549cbf/smart_grow/aero_tower/outfiles/plant_cup.stl' />
