describe model and overall project

--- a/pages/aerotower/index.mdx
+++ b/pages/aerotower/index.mdx
@@ -6,11 +6,17 @@ import Head from 'next/head'
 
 # AeroTower
 
-## Introduction
+When searching for an inexpensive aeroponics system, which was also scalable and modifiable, not many options were found. That is how this project came to life.
+
+The AeroTower is designed (WIP) to serve as an easy entry for people into the world of aeroponics. You can start at **low cost**, **modify** everything as you build it and finally **scale** the system up, if you want to.
+
+In its final form, the AeroTower should be completly **open source** (model, electronics, firmware), **self-sufficient** in terms of energy through a solar panel and connected like an IoT device.
 
 ## Indoor Farming
 
-## Tower
+## The Model
+
+The model itself is inspired by archipelagourbanfarms' [Modular Hydroponic System](https://www.thingiverse.com/thing:2403922) but designed from the ground up. A 3d printable water tank is added, the parts can be screwed together and everything is printable on machines as small as the [Prusa Mini](https://www.prusa3d.com/category/original-prusa-mini/). You can view the source files [here](https://github.com/mfillmer/3d-modelling/tree/master/smart_grow/aero_tower) or edit them. For editing, it is recommended to first take a look at [SolidPython](https://github.com/SolidCode/SolidPython), which is used here.
 
 ## Electronics
 
