add snippet on vertical farming

--- a/pages/aerotower/index.mdx
+++ b/pages/aerotower/index.mdx
@@ -1,4 +1,5 @@
 import Head from 'next/head'
+import VerticalFarming from '../../snippets/VerticalFarming.mdx'
 
 <Head>
   <title>AeroTower</title>
@@ -12,7 +13,11 @@ The AeroTower is designed (WIP) to serve as an easy entry for people into the wo
 
 In its final form, the AeroTower should be completly **open source** (model, electronics, firmware), **self-sufficient** in terms of energy through a solar panel and connected like an IoT device.
 
-## Indoor Farming
+## Vertical Farming
+
+<VerticalFarming />
+
+The AeroTower is designed to make this concept more tangible and to scale up to a complete farm, indoor or outdoor.
 
 ## The Model
 
