--- a/pages/aerotower/index.mdx
+++ b/pages/aerotower/index.mdx
@@ -17,7 +17,7 @@ In its final form, the AeroTower should be completly **open source** (model, ele
 
 <VerticalFarming />
 
-The AeroTower is designed to make this concept more tangible and to scale up to a complete farm, indoor or outdoor.
+The AeroTower is designed to make this concept more tangible while also allowing for scaling the system up to a complete farm, which can be operated indoor or outdoor.
 
 ## The Model
 
