add section about lighting

--- a/pages/aerotower/index.mdx
+++ b/pages/aerotower/index.mdx
@@ -25,6 +25,12 @@ The model itself is inspired by archipelagourbanfarms' [Modular Hydroponic Syste
 
 ## Electronics
 
+## Grow Media
+
 ## Lighting
 
-## Grow Media
+By intention, lighting is not part of the AeroTower. The tower is designed to supply plants with water and nutrients while being powered by light itself.
+
+If you plan to use the tower indoors with artificial lighting, you can follow [this link](https://lightsciencetech.com/what-are-par-ppf-and-ppfd-and-why-should-you-care/) to learn about metrics for grow lights.
+
+To find the right light system for you, a good start could be to search for lights using the LM301B, [an energy efficient LED from Samsung](https://hackaday.com/2022/10/31/a-single-watt-hydroponic-lighting-system/).
