--- a/pages/aerotower/index.mdx
+++ b/pages/aerotower/index.mdx
@@ -33,4 +33,4 @@ By intention, lighting is not part of the AeroTower. The tower is designed to su
 
 If you plan to use the tower indoors with artificial lighting, you can follow [this link](https://lightsciencetech.com/what-are-par-ppf-and-ppfd-and-why-should-you-care/) to learn about metrics for grow lights.
 
-To find the right light system for you, a good start could be to search for lights using the LM301B, [an energy efficient LED from Samsung](https://hackaday.com/2022/10/31/a-single-watt-hydroponic-lighting-system/).
+To find the right light system for you, a good start could be to search for lights using the LM301B, [an energy efficient LED from Samsung](https://hackaday.com/2022/10/31/a-single-watt-hydroponic-lighting-system/) which could also be bought [here](https://www.led-tech.de/de/21x-Samsung-LM301B-Streifenplatine-3500k).
