add links and files

--- a/pages/aerotower/index.mdx
+++ b/pages/aerotower/index.mdx
@@ -1,4 +1,5 @@
 import Head from 'next/head'
+import Link from 'next/link'
 import VerticalFarming from '../../snippets/VerticalFarming.mdx'
 
 <Head>
@@ -24,6 +25,9 @@ The AeroTower is designed to make this concept more tangible while also allowing
 The model itself is inspired by archipelagourbanfarms' [Modular Hydroponic System](https://www.thingiverse.com/thing:2403922) but designed from the ground up. A 3d printable water tank is added, the parts can be screwed together and everything is printable on machines as small as the [Prusa Mini](https://www.prusa3d.com/category/original-prusa-mini/). You can view the source files [here](https://github.com/mfillmer/3d-modelling/tree/master/smart_grow/aero_tower) or edit them. For editing, it is recommended to first take a look at [SolidPython](https://github.com/SolidCode/SolidPython), which is used here.
 
 ## Electronics
+
+To build the electronics of the AeroTower, [please have a look here](aerotower/electronics).
+For the moment, the circuitry needs to powered by an external power source. To become fully self sufficient, power supply by battery and solar is planned.
 
 ## Grow Media
 
