--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -9,5 +9,5 @@ import Link from 'next/link'
 
 This Website is currently being built.
 
-For now, head to <Link href='aerotower/models'>this page</Link> to
+For now, head to [this page](aerotower/models) to
 explore the first results.
