add code and part list

--- a/pages/aerotower/electronics.mdx
+++ b/pages/aerotower/electronics.mdx
@@ -1,1 +1,35 @@
+import Code from '../../snippets/AeroTowerControllerCode.mdx'
+
 # AeroTower Electronics
+
+The circuit of the tower is based on ordinary breadboards to be easily extendable and accessible.
+
+## List of Components
+
+- Breadboard (55x83 mm)
+- Seeed XIAO Samd21
+- Seeed Water Atomizer
+- M20 Mini Water Pump
+- Mosfet (IRFZ44N)
+- 10k Ohm Resistor
+- Jumper Wires
+- Cotton Sticks
+- 4mm/6mm silicone tube, length depending on your towers height
+
+## Assembly
+
+### Seeed XIAO
+
+### Connect the Pump
+
+### Add the Atomizer
+
+## Code
+
+First, you need to [install CicuitPython onto the Seeed XIAO](https://wiki.seeedstudio.com/Seeeduino-XIAO-CircuitPython/).
+
+Afterwards, create a file named `code.py` in the root folder of the device and add the following code:
+
+<Code />
+
+## Mounting Everything into the tower
