--- a/pages/aerotower/electronics.mdx
+++ b/pages/aerotower/electronics.mdx
@@ -12,11 +12,46 @@ The circuit of the tower is based on ordinary breadboards to be easily extendabl
 - [M20 Mini Water Pump](https://www.ebay.de/itm/125334850334)
 - [Mosfet (IRFZ44N)](https://www.reichelt.de/mosfet-n-kanal-55-v-49-a-rds-on-0-0175-ohm-to-220ab-irfz-44n-p8820.html)
 - [10k Ohm Resistor](https://www.reichelt.de/widerstand-metallschicht-10-0-kohm-0207-0-6-w-1--metall-10-0k-p11449.html)
+- [Diode](https://www.reichelt.de/gleichrichterdiode-1000-v-1-a-do-41-1n-4007-dio-p219368.html)
 - [Jumper Wires](https://amzn.eu/d/h0FLA8S)
 - [Cotton Sticks](https://amzn.eu/d/0gSTmLu)
 - [3x4 mm silicone tube](https://www.ebay.de/itm/263190368164), length depending on your towers height
 
 ## Assembly
+
+![](../../public/aerotower/PXL_20230210_174916842.jpg)
+![](../../public/aerotower/PXL_20230210_175241967.jpg)
+![](../../public/aerotower/PXL_20230210_181033127.jpg)
+![](../../public/aerotower/PXL_20230210_181135501.jpg)
+![](../../public/aerotower/PXL_20230210_181334972.jpg)
+![](../../public/aerotower/PXL_20230210_181604022.jpg)
+![](../../public/aerotower/PXL_20230210_181705483.MP.jpg)
+![](../../public/aerotower/PXL_20230210_181930728.jpg)
+![](../../public/aerotower/PXL_20230210_181946522.jpg)
+![](../../public/aerotower/PXL_20230210_182037363.MP.jpg)
+![](../../public/aerotower/PXL_20230210_182358002.jpg)
+![](../../public/aerotower/PXL_20230210_182612659.jpg)
+![](../../public/aerotower/PXL_20230210_182702211.MP.jpg)
+![](../../public/aerotower/PXL_20230210_183112363.jpg)
+![](../../public/aerotower/PXL_20230210_183130331.jpg)
+![](../../public/aerotower/PXL_20230210_183232261.MP.jpg)
+![](../../public/aerotower/PXL_20230210_183249546.jpg)
+![](../../public/aerotower/PXL_20230210_183354810.jpg)
+![](../../public/aerotower/PXL_20230210_183359147.MP.jpg)
+![](../../public/aerotower/PXL_20230210_183518938.jpg)
+![](../../public/aerotower/PXL_20230210_183537655.jpg)
+![](../../public/aerotower/PXL_20230210_183618093.jpg)
+![](../../public/aerotower/PXL_20230210_183640020.MP.jpg)
+![](../../public/aerotower/PXL_20230210_183701839.jpg)
+![](../../public/aerotower/PXL_20230210_183723801.jpg)
+![](../../public/aerotower/PXL_20230210_183832827.jpg)
+![](../../public/aerotower/PXL_20230210_183932154.jpg)
+![](../../public/aerotower/PXL_20230210_183953595.jpg)
+![](../../public/aerotower/PXL_20230210_184024079.jpg)
+![](../../public/aerotower/PXL_20230210_184107975.jpg)
+![](../../public/aerotower/PXL_20230210_184130210.jpg)
+![](../../public/aerotower/PXL_20230210_184151741.jpg)
+![](../../public/aerotower/PXL_20230210_184200119.jpg)
 
 ### Seeed XIAO
 
