fix: add missing picture and error notice

--- a/pages/aerotower/electronics.mdx
+++ b/pages/aerotower/electronics.mdx
@@ -28,15 +28,30 @@ Afterwards, create a file named `code.py` in the root folder of the device and a
 
 ## Assembly
 
-Once you have loaded the code onto the XIAO, connect it to the pin headers found in the XIAO packaging. You can optionally solder them to ensure better hold.
+Once you have loaded the code onto the XIAO you can assemble the circuitry.
+This does not mean, that you cannot modify the code afterwards, it is just easier to start off this way.
 
 ### Seeed XIAO
+
+Connect the Seeed XIAO microcontroller to the pin headers found in the packaging. You can optionally solder them to ensure better hold.
 
 ![](../../public/aerotower/PXL_20230210_174916842.jpg)
 
 Take the breadboard and place it so you look at it with the red line pointing torwards you. Put the microcontroller on the right side, facing the usb c port outwards.
 
 ![](../../public/aerotower/PXL_20230210_175241967.jpg)
+
+Then, connect the 5 volt and ground pins to the power and ground rails of the breadboard.
+
+<Callout type='error' emoji='️🚫'>
+  <p>During taking of the pictures, an error happened:</p>
+  <p>
+    These two wires are not present on the following picutures, because them
+    missing was not noticed early enough.
+  </p>
+</Callout>
+
+![](../../public/aerotower/PXL_20230213_200105889.jpg)
 
 ### Pump (Preparation)
 
