--- a/pages/aerotower/models.mdx
+++ b/pages/aerotower/models.mdx
@@ -8,48 +8,47 @@ import { BreakingChangeAlert } from '../../components/BreakingChangeAlert'
 
 # Models
 
-Below are previews of the 3d models for printing. [You may download the files directly from Github.](https://github.com/mfillmer/3d-modelling/tree/master/smart_grow/aero_tower/outfiles)
+Below are previews of the 3d models for printing. [You may download the files directly from Github.](https://github.com/urban-smart-grow/AeroTower/tree/main/exports)
 
-## Tower Modul
+## Body
 
 This is the main module of the tower. You can print this model multiple times and stack them together.
 
-<ModelViewer url='https://raw.githubusercontent.com/mfillmer/3d-modelling/6aae23a79189e27bfb1a3efb5d112d7af5549cbf/smart_grow/aero_tower/outfiles/aero_tower.stl' />
+<ModelViewer url='https://raw.githubusercontent.com/urban-smart-grow/AeroTower/main/exports/body.stl' />
 
 ## Plant Cup
 
 These cups are designed to contain the plants from seed to harvest.
 Five cups can be mounted into one tower module.
 
-<ModelViewer url='https://raw.githubusercontent.com/mfillmer/3d-modelling/6aae23a79189e27bfb1a3efb5d112d7af5549cbf/smart_grow/aero_tower/outfiles/plant_cup.stl' />
+<ModelViewer url='https://raw.githubusercontent.com/urban-smart-grow/AeroTower/main/exports/plant_cup.stl' />
+
 ## Tower Tank
 
 Please make sure this part is watertight. You can refer to [this article](https://help.prusa3d.com/article/watertight-prints_112324) to configure your printer accordingly.
 
-<ModelViewer url='https://raw.githubusercontent.com/mfillmer/3d-modelling/6aae23a79189e27bfb1a3efb5d112d7af5549cbf/smart_grow/aero_tower/outfiles/aero_tower_tank.stl' />
+<ModelViewer url='https://raw.githubusercontent.com/urban-smart-grow/AeroTower/main/exports/tank.stl' />
 
 ## Tower Tank Adapter
 
 Bridging between tank and tower module.
 
-<ModelViewer url='https://raw.githubusercontent.com/mfillmer/3d-modelling/6aae23a79189e27bfb1a3efb5d112d7af5549cbf/smart_grow/aero_tower/outfiles/aero_tower_tank_adapter.stl' />
+<ModelViewer url='https://raw.githubusercontent.com/urban-smart-grow/AeroTower/main/exports/tank_adapter.stl' />
 
 ## Tower Head
 
-<BreakingChangeAlert />
+### Mount
 
-The housing for the electronics at the top of the tower.
+<ModelViewer url='https://raw.githubusercontent.com/urban-smart-grow/AeroTower/main/exports/head_mount.stl' />
 
-<ModelViewer url='https://raw.githubusercontent.com/mfillmer/3d-modelling/6aae23a79189e27bfb1a3efb5d112d7af5549cbf/smart_grow/aero_tower/outfiles/aero_tower_head.stl' />
+### Head Tank
 
-## Tower Head Fogger
+<ModelViewer url='https://raw.githubusercontent.com/urban-smart-grow/AeroTower/main/exports/head_tank.stl' />
 
-<BreakingChangeAlert />
+### Electronics Case
 
-<ModelViewer url='https://raw.githubusercontent.com/mfillmer/3d-modelling/6aae23a79189e27bfb1a3efb5d112d7af5549cbf/smart_grow/aero_tower/outfiles/aero_tower_head_fogger.stl' />
+<ModelViewer url='https://raw.githubusercontent.com/urban-smart-grow/AeroTower/main/exports/head_electronics_case.stl' />
 
-## Tower Head Lid
+### Electronics Lid
 
-<BreakingChangeAlert />
-
-<ModelViewer url='https://raw.githubusercontent.com/mfillmer/3d-modelling/6aae23a79189e27bfb1a3efb5d112d7af5549cbf/smart_grow/aero_tower/outfiles/aero_tower_head_lid.stl' />
+<ModelViewer url='https://raw.githubusercontent.com/urban-smart-grow/AeroTower/main/exports/head_electronics_lid.stl' />
