--- a/pages/aerotower/electronics.mdx
+++ b/pages/aerotower/electronics.mdx
@@ -44,10 +44,9 @@ Take the breadboard and place it so you look at it with the red line pointing to
 Then, connect the 5 volt and ground pins to the power and ground rails of the breadboard.
 
 <Callout type='error' emoji='️🚫'>
-  <p>During taking of the pictures, an error happened:</p>
+  <p>During picture taking an error happened:</p>
   <p>
-    These two wires are not present on the following picutures, because them
-    missing was not noticed early enough.
+    These two wires are not present on the following picutures, because it was not noticed early enough that they are missing.
   </p>
 </Callout>
 
@@ -99,7 +98,7 @@ Put the prepared grove cable on the left side of the breadboard.
 Connect the yellow cable to [pin 8](https://wiki.seeedstudio.com/Seeeduino-XIAO/#hardware-overview). Then connect the red and black cable to power and ground rails.
 
 <Callout type='error' emoji='️🚫'>
-  <p>During taking of the pictures, an error happened:</p>
+  <p>During picture taking an error happened:</p>
   <p>The left most cables connecting power and ground are reversed.</p>
 </Callout>
 
