update models description and grow media section

--- a/pages/aerotower/index.mdx
+++ b/pages/aerotower/index.mdx
@@ -22,7 +22,9 @@ The AeroTower is designed to make this concept more tangible while also allowing
 
 ## The Model
 
-The model itself is inspired by archipelagourbanfarms' [Modular Hydroponic System](https://www.thingiverse.com/thing:2403922) but designed from the ground up. A 3d printable water tank is added, the parts can be screwed together and everything is printable on machines as small as the [Prusa Mini](https://www.prusa3d.com/category/original-prusa-mini/). You can view the source files [here](https://github.com/mfillmer/3d-modelling/tree/master/smart_grow/aero_tower) or edit them. For editing, it is recommended to first take a look at [SolidPython](https://github.com/SolidCode/SolidPython), which is used here.
+The model itself is inspired by archipelagourbanfarms' [Modular Hydroponic System](https://www.thingiverse.com/thing:2403922) but designed from the ground up. A 3d printable water tank is added, the parts can be screwed together and everything is printable on machines as small as the [Prusa Mini](https://www.prusa3d.com/category/original-prusa-mini/). You can view the source files [here](https://github.com/mfillmer/3d-modelling/tree/master/smart_grow/aero_tower) or edit them. For editing, it is recommended to first take a look at [Cadquery 2](https://cadquery.readthedocs.io/en/latest/index.html), which is used here.
+
+For print instructions and previews, head over to the [models page](./aerotower/models).
 
 ## Electronics
 
@@ -30,6 +32,9 @@ To build the electronics of the AeroTower, [please have a look here](aerotower/e
 For the moment, the circuitry needs to powered by an external power source. To become fully self sufficient, power supply by battery and solar is planned.
 
 ## Grow Media
+
+Any kind of grow media will work, but the one tested so far is [Seramis](https://www.seramis.com/), a fine clay granulate.
+It prevents the fog from spilling out of the cups.
 
 ## Lighting
 
