--- a/pages/aerotower/models.mdx
+++ b/pages/aerotower/models.mdx
@@ -9,6 +9,9 @@ import { BreakingChangeAlert } from '../../components/BreakingChangeAlert'
 # Models
 
 Below are previews of the 3d models for printing. [You may download the files directly from Github.](https://github.com/urban-smart-grow/AeroTower/tree/main/exports)
+For printing, PETG is recommended. It is easy to print and does not deform under sun exposure.
+All models can be printend without supports and with your normal print settings.
+The only special part is the [water tank](#tower-tank), which needs to be printed watertight. To configure your slicer to do that, [you can inform yourself here](https://help.prusa3d.com/article/watertight-prints_112324).
 
 ## Body
 
