add rendering of model assembly

--- a/pages/aerotower/index.mdx
+++ b/pages/aerotower/index.mdx
@@ -1,6 +1,7 @@
 import Head from 'next/head'
 import Link from 'next/link'
 import VerticalFarming from '../../snippets/VerticalFarming.mdx'
+import { ModelViewer } from '../../components/ModelViewer'
 
 <Head>
   <title>AeroTower</title>
@@ -13,6 +14,10 @@ When searching for an inexpensive aeroponics system, which was also scalable and
 The AeroTower is designed (WIP) to serve as an easy entry for people into the world of aeroponics. You can start at **low cost**, **modify** everything as you build it and finally **scale** the system up, if you want to.
 
 In its final form, the AeroTower should be completly **open source** (model, electronics, firmware), **self-sufficient** in terms of energy through a solar panel and connected like an IoT device.
+
+Below, you can see a rendering of the assembled model:
+
+<ModelViewer url='https://raw.githubusercontent.com/urban-smart-grow/AeroTower/main/exports/assembly.stl' />
 
 ## Vertical Farming
 
