--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -7,7 +7,16 @@ import Link from 'next/link'
 
 # Urban Smart Grow
 
-This Website is currently being built.
+A place for open source projects related to Vertical Farming, which includes topics like indoor farming, urban farming and soilless agriculuture.
 
-For now, head to [this page](aerotower/models) to
-explore the first results.
+## What is Vertical Farming?
+
+In 1999, [Dr. Dickson Despommier](https://en.wikipedia.org/wiki/Dickson_Despommier) started to work on a new concept for food cultivation with his graduate students and coined the term Vertical Farming.
+
+Since then, the topic gained momentum leading to multi billion market ([USD 4.34 billion in 2021](https://www.grandviewresearch.com/industry-analysis/vertical-farming-market)).
+
+You can find a variety of [documentaries online](https://youtu.be/ryCkqWI4xtQ) and there is a dedicated [research area for it](https://www.wur.nl/en/dossiers/file/vertical-farming.htm).
+
+## Projects
+
+The first (and for now only) project is the [AeroTower](./aerotower), a low cost and hackable grow system using aeroponics.
