--- a/pages/aerotower/index.mdx
+++ b/pages/aerotower/index.mdx
@@ -34,7 +34,7 @@ For print instructions and previews, head over to the [models page](./aerotower/
 ## Electronics
 
 To build the electronics of the AeroTower, [please have a look here](aerotower/electronics).
-For the moment, the circuitry needs to powered by an external power source. To become fully self sufficient, power supply by battery and solar is planned.
+For the moment, the circuitry needs to be powered by an external power source. To become fully self sufficient, power supply by battery and solar is planned.
 
 ## Grow Media
 
